public/css/research.css
/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */button,hr,input{overflow:visible}progress,sub,sup{vertical-align:baseline}[type=checkbox],[type=radio],legend{box-sizing:border-box;padding:0}html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}details,main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:ButtonText dotted 1px}fieldset{padding:.35em .75em .625em}legend{color:inherit;display:table;max-width:100%;white-space:normal}textarea{overflow:auto}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}summary{display:list-item}[hidden],template{display:none}

@font-face {
    font-family: "Latin Modern Roman";
    src: url("../fonts/lmroman9-regular.otf");
    font-display: swap;
}

@font-face {
    font-family: "Latin Modern Roman";
    font-weight: bold;
    src: url("../fonts/lmroman12-bold.otf");
    font-display: swap;
}

@font-face {
    font-family: "Latin Modern Roman";
    font-weight: 300;
    src: url("../fonts/lmroman17-regular.otf");
    font-display: swap;
}

html, body {
    margin: 0;
    padding: 1em;
    max-width: 50em;

    font-size: 1vw;
    color: #111;
    font-family: "Latin Modern Roman", serif;
}

a {
    text-decoration: underline;
    text-decoration-thickness: from-font;
}

a:hover, a:focus {
    text-decoration: underline dotted;
}

h1 {
    margin-top: 0;
}

h2 {
    margin-top: 2em;
    margin-bottom: 0.5em;
}


li {
    margin-bottom: 0.5em;
}

.favorite {
    padding: 0.5em;
    background-color: #f4e8ed;
}

span.favorite {
    padding: 0 0.4em;
    background-color: #f4e8ed;
}

